--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+config.js
+data.json
+key_service_account.json
 /node_modules
 /.pnp
 .pnp.js
