--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/data.json
+/key_service_account.json
+/upload-json.js
 
-# dependencies
-config.js
 data.json
 key_service_account.json
+upload-json.js
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
